# openxr_remapping_layer

./: Cargo.toml  README.md  manifest.json
layer_core/: Cargo.toml
layer_core/src/: entry.rs  lib.rs
layer_core/src/input/: mod.rs  suggested_bindings.rs
layer_core/src/openxr_overrides/: action.rs  action_set.rs  instance.rs  mod.rs  session.rs
layer_core/src/wrappers/: instance.rs  layer_action.rs  layer_action_set.rs  mod.rs  session.rs
layer_entry/: Cargo.toml
layer_entry/src/: lib.rs
