[package]
name = "layer_core"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.3"
log = "0.4"
openxr = { git = "https://github.com/Sorenon/openxrs", default-features = false, branch = "layer-breaking"}
simplelog = "0.12"
once_cell = "1.13"
suinput = { path = "../../suinput/suinput", package = "suinput" }
openxr-driver = { path = "../../suinput/drivers/openxr-driver" }
parking_lot = "0.12"
thunderdome = "0.5"